--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,10 @@
         Made with ❤️ by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
       </div>
+      <div class="container row">
+        <h2 id="domain" class="col-6 inline-block"></h2>
+        <button class="col-6 inline-block"></button>
+      </div>
     </div>
   </body>
 </html>
