fix: backend if() corregido con un contador

--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,9 @@
         Made with ❤️ by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
       </div>
-      <div class="container row">
-        <h2 id="domain" class="col-6 inline-block"></h2>
-        <button class="col-6 inline-block"></button>
+      <div class="container-fluid">
+        <button class="col-6 inline-block mx-auto"></button>
+        <h4 id="domain" class="col-6 inline-block mx-auto"></h4>
       </div>
     </div>
   </body>
