fix: error anidado recibiendo 'undefined' por un error ortográfico

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
       </div>
       <div class="container-fluid">
-        <button class="col-6 inline-block mx-auto"></button>
+        <button class="col-2 inline-block mx-auto">Create new domain</button>
         <h4 id="domain" class="col-6 inline-block mx-auto"></h4>
       </div>
     </div>
