--- a/src/index.html
+++ b/src/index.html
@@ -29,17 +29,25 @@
         <div>
           <button
             id="btnNewDomain"
-            class="col-2 inline-block mx-auto position-relative"
+            class="col-2 inline-block mx-auto position-relative bg-success text-light"
           >
             Create new domain
             <span
               id="creations"
-              class="fs-6 ms-2 text-secondary text-body-primary-emphasis position-absolute top-50 start-100 translate-middle-y badge rounded-pill bg-warning"
+              class="fs-6 ms-2 text-light text-body-primary-emphasis position-absolute top-50 start-100 translate-middle-y badge rounded-pill bg-danger"
               >+99 <span class="visually-hidden">unread domains</span></span
             >
           </button>
         </div>
         <h4 id="domain" class="col-6 inline-block mx-auto"></h4>
+        <div>
+          <button
+            id="btnReset"
+            class="col-1 inline-block mx-auto bg-warning text-light"
+          >
+            Reset
+          </button>
+        </div>
       </div>
     </div>
   </body>
