--- a/src/index.html
+++ b/src/index.html
@@ -19,17 +19,20 @@
         <h1>Generador de Nombres de Dominios</h1>
         <button
           id="btnNewDomain"
-          class="col-2 inline-block mx-auto position-relative bg-success text-light"
+          class="btn btn-custom-cursor col-2 inline-block mx-auto mb-2 position-relative bg-success text-light"
         >
           Create new domain
           <span
             id="creations"
             class="fs-6 ms-2 text-light text-body-primary-emphasis position-absolute top-50 start-100 translate-middle-y badge rounded-pill bg-danger"
-            >+99 <span class="visually-hidden">unread domains</span></span
+            >OB1+ <span class="visually-hidden">Stack Overflow</span></span
           >
         </button>
       </div>
-      <h4 id="domain" class="col-6 inline-block mx-auto"></h4>
+      <h4
+        id="domain"
+        class="col-6 inline-block mx-auto display_domain text-secondary"
+      ></h4>
       <div>
         <button
           id="btnReset"
