--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
       <div>
         <button
           id="btnReset"
-          class="col-1 inline-block mx-auto bg-warning text-light"
+          class="btn col-1 inline-block bg-warning mx-auto mb-2 position-relative bg-warning text-light"
         >
           Reset
         </button>
