--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,11 @@
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/072e5df971.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
   <body>
     <div class="container-fluid mx-auto text-center mt-5 pt-5">
@@ -36,11 +41,42 @@
       <div>
         <button
           id="btnReset"
-          class="btn col-1 inline-block bg-warning mx-auto mb-2 position-relative bg-warning text-light"
+          class="btn col-1 inline-block mx-auto mb-2 position-relative bg-warning text-light"
         >
           Reset
         </button>
+        <button
+          id="btnCopy"
+          class="btn inline-block mb-2 mx-auto position-relative bg-secondary text-light"
+          onclick="copyToClipboard()"
+        >
+          <i class="fa-solid fa-clone"></i>
+        </button>
       </div>
     </div>
+    <script>
+      function copyToClipboard() {
+        const texto = document.getElementById("domain").innerText;
+        console.log("Copiado: " + texto);
+        navigator.clipboard
+          .writeText(texto)
+          .then(() => {
+            // alert("Texto copiado al portapapeles");
+            mostrarAlerta(texto);
+          })
+          .catch(err => {
+            console.error("Error al copiar: ", err);
+          });
+      }
+
+      function mostrarAlerta(texto) {
+        Swal.fire({
+          title: "Texto copiado al portapapeles",
+          text: "Copiado: " + texto,
+          icon: "info",
+          confirmButtonText: "Aceptar"
+        });
+      }
+    </script>
   </body>
 </html>
